docs: record what milestone 8 verification actually found
The milestone 8 section said `./gradlew check build` did not run, that
`:backend` and `:proxy` had never been compiled, and that the Testcontainers
suites were all skipped. None of that is true any more, so the section no longer
describes the state of the work.

Replaces it with what ran: the full gate green at 378 tests with nothing
skipped, both plugin modules through Error Prone and NullAway, the 96
Testcontainers suites against real PostgreSQL and MinIO, and the two-node
compose stack booting both plugin jars for the first time — V3 applied, TPS
published as a varying number rather than NULL, and the proxy registering both
nodes and all ten `/world` subcommands.

The two ArchUnit rules were verified by breaking them rather than by grep, which
is what the repository asks of a quality gate.

Adds one finding: `DrainNodeHandler.budget()` does not clamp to
`control.claim-timeout-seconds` even though its own comment argues that it does,
which `MigrateWorldHandler` clamps for explicitly. Harmless at the defaults,
reachable by raising the commit timeout. Reported rather than changed.

The behavioural two-node checks are still open and still unchecked.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01X5r4pWxJtcc23RhagMwjHb